[metadata]
name = pipewatch
version = 0.1.0
description = Lightweight CLI for monitoring and alerting on ETL pipeline failures
long_description = file: README.md
long_description_content_type = text/markdown
author = pipewatch contributors
license = MIT
python_requires = >=3.11

[options]
packages = find:
install_requires =
    requests>=2.28

[options.entry_points]
console_scripts =
    pipewatch = pipewatch.cli:main

[options.extras_require]
dev =
    pytest>=7
    pytest-cov
    responses

[tool:pytest]
testpaths = tests
